Update Spring Boot & Vaadin